# deuktaem

./: .env  Cargo.toml  DB_README.md  PHASE_3_4_COMPLETE.md  README.md  check_all_tables.sh  check_db.py  check_tables.rs  supabase_migration.md  supabase_migration.sh  test_server.md
docs/: DATABASE.md
migrations/: add_popularity_fields.sql  create_basic_tables.sql  create_i18n_tables.sql
sql/: notification_settings.sql
src/: check_db.rs  main.rs  test_auth.rs  test_rls.rs  test_rls_policies.rs  test_supabase.rs
src/api/: mod.rs
src/api/handlers/: mod.rs
src/api/middleware/: mod.rs
src/api/routes/: mod.rs
src/auth/: mod.rs
src/config/: database.rs  mod.rs  supabase.rs
src/domain/dto/: mod.rs  pagenation.rs  request.rs  response.rs
src/domain/entities/: coupon.rs  discount.rs  mod.rs  monitoring.rs  notification.rs  product.rs  shop.rs  translation.rs  user.rs
src/error/: mod.rs
src/examples/: mod.rs  realtime_notification_usage.rs  rls_usage.rs
src/repository/: discount_repository.rs  mod.rs  notification_repository.rs  product_repository.rs  repository_factory.rs  shop_repository.rs  translation_repository.rs  user_repository.rs
src/service/: discount_service.rs  mod.rs  monitoring_service.rs  notification_service.rs  product_service.rs  product_service_simple.rs  shop_service.rs  translation_service.rs  user_service.rs
src/utils/: cache.rs  constants.rs  logger.rs  mod.rs  validation.rs
